# lead_processing_test_task

./: README.md  pyproject.toml
app/: .env  alembic.ini  lead-processing.db  main.py
app/alembic/versions/: 93eff9737391_test_data.py  b47503f77cba_initial.py
app/api/api_v1/: __init__.py  contacts.py  leads.py  operators.py  sources.py
app/core/: config.py
app/core/db/: db_helper.py
app/core/models/: __init__.py  contact.py  lead.py  operator.py  source.py  source_operator.py
app/core/models/mixins/: int_id_pk.py
app/core/schemas/: contact.py  lead.py  operator.py  source.py
app/crud/: base.py  contacts.py  ditribution.py  leads.py  operators.py  sources.py
